Fix aligning bug

--- a/css/style.css
+++ b/css/style.css
@@ -975,6 +975,8 @@ nav.galeri ul li {
 
 .video {
   margin: 0 0 60px;
+}
+.video header {
   text-align: center;
 }
 .video .title {
